--- a/math/matan/demidovich/o01p01.html
+++ b/math/matan/demidovich/o01p01.html
@@ -295,6 +295,12 @@
             $\blacktriangleright$
         </p>
         <hr>
+        <p>
+            <b>9.<b> Доказать неравенство
+                $$2! • 4! ... (2n!) > \frac{[(n+1)!]}{n} при n > 1.$$
+                
+        </p>
+        <hr>
 
         <!-- END CONTAINER -->
     </div></div></div>
