--- a/math/matan/demidovich/o01p01.html
+++ b/math/matan/demidovich/o01p01.html
@@ -296,8 +296,8 @@
         </p>
         <hr>
         <p>
-            <b>9.<b> Доказать неравенство
-                $$2! • 4! ... (2n!) > {[(n+1)!]}^{n} при n > 1.$$
+            <b>9.</b> Доказать неравенство
+                $$2! • 4! ... (2n!) > {[(n+1)!]}^{n}$$ при n > 1
                 
         </p>
         <hr>
