--- a/math/matan/demidovich/o01p01.html
+++ b/math/matan/demidovich/o01p01.html
@@ -297,7 +297,7 @@
         <hr>
         <p>
             <b>9.</b> Доказать неравенство
-                $$2! • 4! ... (2n!) > {[(n+1)!]}^{n}$$ при n > 1
+                $$2! • 4! ... (2n!) > {[(n+1)!]}^{n} при n > 1$$
                 
         </p>
         <hr>
